# dancer

./: CONTRIBUTING.md  README.md  SECURITY.md  TODO  pyproject.toml
src/dancer/: __init__.py  _known_styling.py  config.py  io.py  qt.py  qt_gui.py  qts.py
src/dancer/_styling/: STYLING.md
